hphp/hack/test/typecheck/unmagic_stringish/unmagic_stringish2.php.exp
ERROR: File "unmagic_stringish2.php", line 33, characters 12-25:
Cannot cast a value of type `this` to string. Only primitives may be used in a `(string)` cast. (Typing[4281])
ERROR: File "unmagic_stringish2.php", line 45, characters 12-25:
Cannot cast a value of type `this` to string. Only primitives may be used in a `(string)` cast. (Typing[4281])
ERROR: File "unmagic_stringish2.php", line 66, characters 4-8:
Only string and int values can be used in string interpolation (Typing[4415])
  File "unmagic_stringish2.php", line 66, characters 4-8:
  Expected `string` or `int`
  File "unmagic_stringish2.php", line 58, characters 15-27:
  But got `CNonStringish`
ERROR: File "unmagic_stringish2.php", line 67, characters 6-10:
String concatenation can only be performed on string and int arguments (Typing[4414])
  File "unmagic_stringish2.php", line 67, characters 6-10:
  Expected `string` or `int`
  File "unmagic_stringish2.php", line 58, characters 15-27:
  But got `CNonStringish`
ERROR: File "unmagic_stringish2.php", line 69, characters 4-8:
Only string and int values can be used in string interpolation (Typing[4415])
  File "unmagic_stringish2.php", line 69, characters 4-8:
  Expected `string` or `int`
  File "unmagic_stringish2.php", line 60, characters 15-23:
  But got `CExplicit`
ERROR: File "unmagic_stringish2.php", line 70, characters 6-10:
String concatenation can only be performed on string and int arguments (Typing[4414])
  File "unmagic_stringish2.php", line 70, characters 6-10:
  Expected `string` or `int`
  File "unmagic_stringish2.php", line 60, characters 15-23:
  But got `CExplicit`
ERROR: File "unmagic_stringish2.php", line 72, characters 4-8:
Only string and int values can be used in string interpolation (Typing[4415])
  File "unmagic_stringish2.php", line 72, characters 4-8:
  Expected `string` or `int`
  File "unmagic_stringish2.php", line 61, characters 15-23:
  But got `CImplicit`
ERROR: File "unmagic_stringish2.php", line 73, characters 6-10:
String concatenation can only be performed on string and int arguments (Typing[4414])
  File "unmagic_stringish2.php", line 73, characters 6-10:
  Expected `string` or `int`
  File "unmagic_stringish2.php", line 61, characters 15-23:
  But got `CImplicit`
ERROR: File "unmagic_stringish2.php", line 75, characters 4-12:
Only string and int values can be used in string interpolation (Typing[4415])
  File "unmagic_stringish2.php", line 75, characters 4-12:
  Expected `string` or `int`
  File "unmagic_stringish2.php", line 62, characters 19-31:
  But got `CImplicitIntf`
ERROR: File "unmagic_stringish2.php", line 76, characters 6-14:
String concatenation can only be performed on string and int arguments (Typing[4414])
  File "unmagic_stringish2.php", line 76, characters 6-14:
  Expected `string` or `int`
  File "unmagic_stringish2.php", line 62, characters 19-31:
  But got `CImplicitIntf`
ERROR: File "unmagic_stringish2.php", line 78, characters 4-12:
Only string and int values can be used in string interpolation (Typing[4415])
  File "unmagic_stringish2.php", line 78, characters 4-12:
  Expected `string` or `int`
  File "unmagic_stringish2.php", line 63, characters 19-31:
  But got `CImplicitTuse`
ERROR: File "unmagic_stringish2.php", line 79, characters 6-14:
String concatenation can only be performed on string and int arguments (Typing[4414])
  File "unmagic_stringish2.php", line 79, characters 6-14:
  Expected `string` or `int`
  File "unmagic_stringish2.php", line 63, characters 19-31:
  But got `CImplicitTuse`
ERROR: File "unmagic_stringish2.php", line 81, characters 4-12:
Only string and int values can be used in string interpolation (Typing[4415])
  File "unmagic_stringish2.php", line 81, characters 4-12:
  Expected `string` or `int`
  File "unmagic_stringish2.php", line 64, characters 19-31:
  But got `CImplicitTreq`
ERROR: File "unmagic_stringish2.php", line 82, characters 6-14:
String concatenation can only be performed on string and int arguments (Typing[4414])
  File "unmagic_stringish2.php", line 82, characters 6-14:
  Expected `string` or `int`
  File "unmagic_stringish2.php", line 64, characters 19-31:
  But got `CImplicitTreq`
